<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IEMHR-AN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_name_text_view">User Name:</string>
    <string name="password_text_view">Password</string>
    <string name="email_text_view">Email:</string>
    <string name="full_name_text_view">Full Name:</string>
    <string name="register_here_text_view">Register Here</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="logout_button">Logout</string>

</resources>
